# react-and-django-tutorial

./: .gitignore  AUTHENTICATION_PLAN.md  CACHE_KEY_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  FINAL_IMPROVEMENTS_PLAN.md  KNOWN_ISSUES.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_4_COMPLETION_SUMMARY.md  README.md  TODAYS_ACHIEVEMENTS.md  VOTE_MANAGEMENT_IMPROVEMENTS.md  cookies.txt  docker-compose.yml
backend-django/: .coveragerc  .env.example  .gitignore  .safety-project.ini  README.md  pyproject.toml  pyrightconfig.json  setup_google_oauth.py
backend-django/mysite/: settings.py  urls.py
backend-django/mysite/templates/admin/: base_site.html
backend-django/polls/: admin.py  admin_urls.py  apps.py  auth_urls.py  models.py  schemas.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend-django/polls/management/commands/: cleanup_users.py  debug_users.py  populate_questions.py  setup_production.py
backend-django/polls/migrations/: 0001_initial.py  0002_userprofile_uservote.py  0003_adminusermanagement_pollstatus.py
backend-django/polls/tests/: test_auth_business_logic.py  test_models.py  test_schemas.py  test_serializers.py  test_views.py  tests_models.py  utils.py
backend-django/postman_tests/: Django_Polls_API.postman_collection.json
backend-django/scripts/: wait_for_mysql.py
backend-django/sql/: 001_case_insert_polls_choice_2.sql
docs/: AUTHENTICATION_PLAN.md  README.md
frontend-react/: .gitignore  README.md  SUMMARY_FOR_NEW_CHAT.md  eslint.config.js  (+3 more)
(+107 files in other folders)
