[project]
name = "backend-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "mysqlclient>=2.2.7",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "djlint>=1.36.4",
    "pytest>=8.4.1",
]
