[project]
name = "mysite"
version = "0.1.0"
description = "Backend for the Polls App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "mysqlclient>=2.2.7",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.1",
    "mypy>=1.17.0",
    "pylint-django>=2.6.1",
    "django-debug-toolbar>=5.2.0",
    "djlint>=1.36.4",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "bandit>=1.8.6",
    "safety>=3.2.9",
    "coverage>=7.9.2",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportAttributeAccessIssue = "none"
reportMissingModuleSource = "warning"
extraPaths = ["polls"]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
]
django-settings-module = "mysite.settings"

[tool.pylint]
load-plugins = "pylint_django"
[tool.pylint.messages-control]
disable = "C0114, C0115, C0116, R0903"
[tool.pylint.pylint-django]
django-settings-module = "mysite.settings"
dummy-members = "choice_set"
